--- a/3-4/style.css
+++ b/3-4/style.css
@@ -1,5 +1,16 @@
-h1 {
-    color: white;
-    background-color: grey;
-    align: center;
-  }
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>CSSのテスト</title>
+    <style>
+    h1 {color: white;
+      background-color: grey;
+      text-align: center ; }
+    </style>
+  </head>
+  <body>
+    <h1>CSSとは</h1>
+    <p>CSSはCascading Style Sheetsの略で・・・</p>
+  </body>
+</html>
