--- a/3-4/style.css
+++ b/3-4/style.css
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>CSSのテスト</title>
+    <title></title>
     <style>
     h1 {color: white;
       background-color: grey;
-      text-align: center ; }
+      text-align: center  }
     </style>
   </head>
   <body>
-    <h1>CSSとは</h1>
-    <p>CSSはCascading Style Sheetsの略で・・・</p>
+    
   </body>
 </html>
