--- a/3-4/style.css
+++ b/3-4/style.css
@@ -1,5 +1,7 @@
     h1 {color: white;
       background-color: grey;
       text-align: center  }
-   
+   body {color: white;
+    background-color: grey;
+    text-align: center  }
   
