--- a/3-4/style.css
+++ b/3-4/style.css
@@ -1,7 +1,12 @@
-    h1 {color: white;
+    h1 {
+      color: white;
       background-color: grey;
-      text-align: center  }
-   body {color: white;
+      text-align: center;
+      }
+
+   body {
+    color: white;
     background-color: grey;
-    text-align: center  }
+    text-align: center;
+    }
   
